<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_header"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_header"
        android:layout_margin="20dp"
        android:fillViewport="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/promocode_linear_parent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/promocode_edit_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/promoenter"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/promocode_edit_case"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/promoCase"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/promocode_edit_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:background="@drawable/formfield"
                android:hint="@string/promocode"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="200"
                android:paddingLeft="6dp"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/promocode_image_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/submit_btn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/promocode_text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promoDescription"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/promocode_text_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/promoContact"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
